Updated Readme, a couple style elements, and file structure

--- a/assets/style.css
+++ b/assets/style.css
@@ -1,6 +1,6 @@
 html {
     font-size: 10px;
-    background: url(https://i.imgur.com/b9r5sEL.jpg) bottom center;
+    background: url(http://www.anaclairephotography.com/wp-content/uploads/2014/07/DSC_3300-2.jpg) bottom center;
     background-size: cover;
 }
 
